# gee-dataset

./: .gitattributes  .gitignore  Clean Data of Si Andalan.csv  Cleaning_of_SiAndalan.ipynb  EDA_of_Si_Andalan.ipynb  GEE_PRADANA.py  GEE_extract_data.ipynb  GEE_extract_flood_data.ipynb  GEE_south_sulawesi_fluvial_flood.py  README.md  analysis.ipynb  cleaning_of_siandalan.py  data.md  eda_of_si_andalan.py  geojson_extraction.ipynb  pyproject.toml  requirements.txt  south_sulawesi.geojson  south_sulawesi_flood_data.csv  south_sulawesi_fluvial_flood_history.csv
geojson_extract/: 0_kepulauan_selayar.geojson  10_barru.geojson  11_soppeng.geojson  13_sidenreng_rappang.geojson  14_pinrang.geojson  15_enrekang.geojson  17_tana_toraja.geojson  19_luwu_timur.geojson  1_bulukumba.geojson  20_toraja_utara.geojson  21_kota_makassar.geojson  22_kota_pare_pare.geojson  23_kota_palopo.geojson  2_bantaeng.geojson  3_jeneponto.geojson  5_gowa.geojson  6_sinjai.geojson  8_maros.geojson
south_sulawesi_flood_history/: readme.md  scrape.py
